# extension

./: .gitignore  offscreen.html  package-lock.json  package.json  popup.html  tsconfig.json  vite.config.ts
.github/: dependabot.yml
public/: manifest.json
src/background/: offscreen.ts  service-worker.ts
src/content/: autofill.ts  content-script.ts  form-detector.ts  save-detector.ts
src/crypto-wasm/: Cargo.toml
src/crypto-wasm/src/: lib.rs
src/popup/: popup.tsx
src/popup/components/: App.tsx  Generator.tsx  Login.tsx  MfaVerify.tsx  Pairing.tsx  Search.tsx  Settings.tsx  VaultList.tsx
src/shared/: api-client.ts  bridge-client.ts  constants.ts  crypto-bridge.ts  message-types.ts  storage.ts  types.ts  vault-manager.ts
src/styles/: popup.css
